deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: oip-minio-dev
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: oip-minio-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oip-minio-dev
spec:
  selector:
    matchLabels:
      app: oip-minio-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: oip-minio-dev
    spec:
      containers:
      - name: oip-minio-dev
        image: socialalphaoip/minio-microservice:dev
        ports:
        - containerPort: 8080
---
