ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: oip-minio-dev-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - oip-minio-dev.oip.dev.code-alpha.org
    secretName: oip-minio-dev-tls
  rules:  
  - host: oip-minio-dev.oip.dev.code-alpha.org
    http:
      paths:
      - backend:
          serviceName: oip-minio-dev
          servicePort: 80
